adjusting line height on events page, nav background to white, centering services banner on mobile, and fixed background on what we doing template part

--- a/themes/gen-why-media/sass/pages/_header.scss
+++ b/themes/gen-why-media/sass/pages/_header.scss
@@ -20,7 +20,7 @@
 
 .site-header-mobile {
 	height: inherit;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: $color__mainw;
 	border-bottom: 1px solid #000;
 	margin: 0 auto;
 	position: fixed;
@@ -89,7 +89,7 @@
 	.site-header {
 	display: none;
 	@include tablet {
-		background-color: rgba(255, 255, 255, 0.9);
+		background-color: $color__mainw;
 		border-bottom: 1px solid #000;
 		display: inline;
 		margin: 0 auto;
